[gd_scene load_steps=6 format=2]

[ext_resource path="res://Images/arcane.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Card.gd" type="Script" id=2]
[ext_resource path="res://Images/ice.png" type="Texture" id=3]
[ext_resource path="res://Images/ice_crystal.png" type="Texture" id=4]
[ext_resource path="res://Images/fire.png" type="Texture" id=5]

[node name="Card" type="Node2D"]
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -23.0
margin_top = -10.0
margin_right = 42.0
margin_bottom = 21.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Error
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -40.0
margin_top = -76.0
margin_right = 68.0
margin_bottom = 83.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolTip" type="Node2D" parent="."]
visible = false
position = Vector2( 2, 0 )

[node name="Rect" type="ColorRect" parent="ToolTip"]
margin_right = 145.0
margin_bottom = 133.0
color = Color( 0.701961, 0.717647, 0.427451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="ToolTip/Rect"]
margin_left = -2.0
margin_right = 142.0
margin_bottom = 121.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tooltip"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arcane" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.075, 0.075 )
texture = ExtResource( 1 )

[node name="Fire" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.075, 0.075 )
texture = ExtResource( 5 )

[node name="Ice" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.075, 0.075 )
texture = ExtResource( 3 )

[node name="BottomSquare" type="ColorRect" parent="."]
margin_left = -74.0
margin_top = 13.0
margin_right = 73.0
margin_bottom = 108.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost" type="ColorRect" parent="BottomSquare"]
margin_left = 106.0
margin_top = 12.0
margin_right = 133.0
margin_bottom = 38.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BottomSquare/Cost"]
margin_left = -1.0
margin_top = 5.0
margin_right = 15.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="BottomSquare/Cost"]
position = Vector2( 22, 28 )
scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 4 )

[node name="Name" type="ColorRect" parent="BottomSquare"]
margin_left = 3.0
margin_top = 14.0
margin_right = 134.0
margin_bottom = 46.0
rect_scale = Vector2( 0.75, 0.75 )
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BottomSquare/Name"]
margin_left = -1.0
margin_top = -3.0
margin_right = 155.0
margin_bottom = 31.0
rect_scale = Vector2( 0.75, 0.75 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Name"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorType" type="ColorRect" parent="BottomSquare"]
margin_left = 23.0
margin_top = 40.0
margin_right = 134.0
margin_bottom = 45.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="ColorRect" parent="BottomSquare"]
margin_left = 4.0
margin_top = 33.0
margin_right = 145.0
margin_bottom = 94.0
color = Color( 1, 1, 1, 0 )

[node name="Label" type="Label" parent="BottomSquare/Description"]
margin_right = 141.0
margin_bottom = 61.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Description of card"
align = 1
valign = 1
autowrap = true

[connection signal="mouse_entered" from="ColorRect" to="." method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect" to="." method="_on_ColorRect_mouse_exited"]
